feat: use jlama embeddings to detect when we need to kick off the Quick context